--- a/style.css
+++ b/style.css
@@ -5,23 +5,23 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.decision-matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.decision-matrix img {
   width: 100%;
 }
 
-.aaa .more-inf {
+.decision-matrix .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .decision-matrix {
     text-align: center;
   }
 }
