refactor: remove tag selectors from html and css so that it runs faster according to rule 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.main-container {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.decision-matrix img {
+.decision-matrix .matrix-image {
   width: 100%;
 }
 
@@ -57,7 +57,7 @@ button {
   outline: none;
 }
 
-button {
+.button-control {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +67,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button-control:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.section-heading,
+.add-item-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,7 +83,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.task-list-input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,22 +96,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task-list-input-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-item-label {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.add-item-input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -121,50 +121,51 @@ li {
   align-items: center;
 }
 
-li>* {
+.task-list-item>* {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+.task-list-item>.task-list-input-checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.task-list-item>.task-list-label  {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.task-list-item>.task-list-input-text {
   width: 226px
 }
 
-button.delete img {
+.button-delete .button-delete-image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button-delete .button-delete-image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through color: #888;
+#completed-tasks .task-list-label {
+  text-decoration: line-through; 
+  color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list-item .task-list-input-text {
   display: none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .task-list-input-text {
   display: inline-block;
   width: 224px
 }
 
-ul li.edit-mode label {
+.edit-mode .task-list-label {
   display: none;
 }
