--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -139,7 +139,7 @@ button {
 }
 
 .task-list-item>.task-list-input-text {
-  width: 226px
+  width: 226px;
 }
 
 .button-delete .button-delete-image {
@@ -160,12 +160,12 @@ button {
 
 /* Edit Task */
 .task-list-item .task-list-input-text {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-list-input-text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-list-label {
