fix: replace id selectors from css  according to rule 2.1 in html-and-css-extended.md

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ button {
 }
 
 /* Completed */
-#completed-tasks .task-list-label {
+.completed-tasks-container .task-list-label {
   text-decoration: line-through; 
   color: #888;
 }
